--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
             <version>24.0.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.15.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
